# C_MSc

./: CMakeLists.txt  DCL_MsgQueue.c  DCL_MsgQueue.h  README.md  TST_MsgQueue.c  TST_MsgQueue.h  autocmake.sh  dcl_arbiter.c  dcl_arbiter.h  dcl_config.c  dcl_config.h  dcl_dcode.c  dcl_dcode.h  dcl_fsm.c  dcl_fsm.h  dcl_fsm_heat.c  dcl_fsm_heat.h  dcl_fsm_triKont.c  dcl_fsm_triKont.h  dcl_heat.c  dcl_heat.h  dcl_logs.c  dcl_logs.h  dcl_msgQueue.c  dcl_msgQueue.h  dcl_msg_triKont.c  dcl_msg_triKont.h  dcl_serial.c  dcl_serial.h  dcl_sstrings.c  dcl_sstrings.h  dcl_string.c  dcl_string.h  dcl_structs.c  dcl_structs.h  dcl_supervisor.c  dcl_supervisor.h  dcl_threads.c  dcl_threads.h  dcl_time.c  (+4 more)
